<resources>
    <string name="app_name">Storie</string>
    <string name="confirm_button">Confirm</string>
    <string name="dimension_learn">What have I learnt today?</string>
    <string name="main_text_prompt">Click here to enter...</string>
    <string name="finish_button">Finish</string>
    <string name="delete">Delete</string>
    <string name="entry_button_margin">2dp</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="timeline_view">Timeline View</string>
    <string name="select_date">Select a date...</string>
    <string name="new_entry">New Entry</string>
    <string name="save_button">Save</string>
    <string name="title">Title</string>
    <string name="placehold_text">Please enter text here</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="text">Text</string>
    <string name="number">Number</string>
    <string name="deactivate">Deactivate</string>
    <string name="activate">Activate</string>
    <string name="unavailable_feature">This feature will be available in the next release.</string>
    <string name="settings">Settings</string>
    <string name="edit_template">Edit template</string>\
    <string name="address_found">address_found</string>
    <string name="no_address_found">no_address_found</string>
    <string name="service_not_available">service_not_available</string>
    <string name="invalid_lat_long_used">invalid_lat_long_used</string>
    <string name="export">Export</string>
    <string name="stories">Stories</string>
    <string name="default_font">sans-serif-light</string>
    <string name="SG">\@Singapore</string>
</resources>
