<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/timeline_toolbar"
        android:background="@color/colorPrimaryDark">

        <TextView
            android:id="@+id/timeline_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/timeline_view"
            android:textColor="#ffffff"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif"/>

        <Button
            android:id="@+id/timeline_toolbar_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@drawable/rounded_rectangle"
            android:layout_gravity="end"
            android:text="@string/confirm_button"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:textAllCaps="false"/>

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="61dp"
        android:id="@+id/timeline_date_relative_layout"
        android:layout_below="@+id/timeline_toolbar"
        android:layout_centerHorizontal="true"
        android:background="@drawable/underline"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:id="@+id/timeline_textview_from"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeline_from_date"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textColor="#000000"
            android:text="@string/select_date"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/timeline_textview_from"
            android:layout_marginStart="30dp"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:id="@+id/timeline_textview_to"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textColor="#000000"
            android:layout_below="@+id/timeline_textview_from"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/timeline_to_date"
            android:textSize="14sp"
            android:fontFamily="sans-serif"
            android:textColor="#000000"
            android:text="@string/select_date"
            android:layout_below="@+id/timeline_from_date"
            android:layout_alignStart="@+id/timeline_from_date"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeline_scroll_view">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/timeline_date_relative_layout"
            android:layout_centerHorizontal="true"
            android:layout_margin="50dp"
            android:id="@+id/timeline_radio_group">


            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:id="@+id/timeline_rb_weather"
                android:drawableRight="@drawable/ic_weather"
                android:layout_margin="10dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:id="@+id/timeline_rb_emotion"
                android:drawableRight="@drawable/ic_happy"
                android:layout_margin="10dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:id="@+id/timeline_rb_exercise"
                android:drawableRight="@drawable/ic_exercise"
                android:layout_margin="10dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:id="@+id/timeline_rb_tag"
                android:drawableRight="@drawable/ic_tag_full"
                android:layout_margin="10dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="What have I learnt today?"
                android:id="@+id/timeline_rb_learnt"
                android:layout_margin="10dp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="What problem did I face today?"
                android:id="@+id/timeline_rb_problem"
                android:layout_margin="10dp"/>
        </RadioGroup>
    </ScrollView>
</RelativeLayout>